[package]
name = "lsq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
logos = "0.14.0"
once_cell = "1.19.0"
lalrpop-util = { version = "0.20.0", features = ["unicode", "lexer"] }
regex = "1.10.3"
derive-getters = "0.3.0"
derive-new = "0.6.0"
rust_lisp = "0.18.0"
anyhow = "1.0.79"
syntect = { version = "5.2.0", features = ["default-syntaxes"] }
